fix overflowing div bubble

--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ test{
     height: 35px;
 }
 .bubble{
+    position: relative;
+    word-break: break-all;
     width: 75%; 
     background-color: cornflowerblue; 
     border-radius: 10px;
@@ -112,7 +114,6 @@ input:focus, textarea:focus, select:focus{
     left: 0;
     right: 0;
     margin-top: 15px;
-    overflow-x: hidden;
     overflow-y: auto;
     padding-right: 5px;
 }
